--- a/application/admin/view/box_cate/edit.html
+++ b/application/admin/view/box_cate/edit.html
@@ -10,7 +10,7 @@
                     <h5>添加盒子</h5>
                 </div>
                 <div class="ibox-content">
-                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('cate/cate_post')}" enctype="multipart/form-data">
+                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box_cate/cate_post')}" enctype="multipart/form-data">
                         <input type="hidden" name="id" value="{$info.id}">
                         <div class="form-group">
                             <label class="col-sm-2 control-label">名称</label>
