--- a/application/admin/view/box/add.html
+++ b/application/admin/view/box/add.html
@@ -66,7 +66,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">祝福</label>
                             <div class="col-sm-9">
-                                <textarea name="content" required lay-verify="required" placeholder="请输入" class="layui-textarea"></textarea>
+                                <textarea name="content" required lay-verify="required" placeholder="请输入祝福" class="layui-textarea"></textarea>
                             </div>
                         </div>
                         
