--- a/application/admin/view/box/edit.html
+++ b/application/admin/view/box/edit.html
@@ -68,7 +68,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">祝福</label>
                             <div class="col-sm-9">
-                                <textarea name="content" required lay-verify="required" placeholder="请输入" class="layui-textarea">{$info.content}</textarea>
+                                <textarea name="content" required lay-verify="required" placeholder="请输入祝福" class="layui-textarea">{$info.content}</textarea>
                             </div>
                         </div>
                         
