--- a/application/admin/view/category/add.html
+++ b/application/admin/view/category/add.html
@@ -78,6 +78,12 @@
                                 <input type="text" name="cat_name" value="" class="form-control">
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">英文名称</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="english_name" value="" class="form-control">
+                            </div>
+                        </div>
 
                         <div class="form-group">
                             <label class="col-sm-2 control-label">分类广告</label>
