--- a/application/admin/view/category/index.html
+++ b/application/admin/view/category/index.html
@@ -17,6 +17,7 @@
                                 <tr>
                                     <th>id</th>
                                     <th>分类名称</th>
+                                    <th>英文名称</th>
                                     <!-- <th>是否显示</th> -->
                                     <th>操作</th>
                                 </tr>
@@ -32,6 +33,7 @@
                                     <tr>
                                         <td>{$vo.cat_id}</td>
                                         <td>{$vo.cat_name}</td>
+                                        <td>{$vo.english_name}</td>
                                         <!-- <td>{eq name="vo['is_show']" value="1"}显示{else /}隐藏{/eq}</td> -->
                                         <td>
                                             <a class="a" href="{:url('category/add',['pid'=>$vo.cat_id],false)}">添加子分类</a>
