--- a/application/admin/view/box_music/add.html
+++ b/application/admin/view/box_music/add.html
@@ -57,8 +57,8 @@
                             </div>
                         </div>
                     </form>
-                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box_music/upload_music')}" enctype="multipart/form-data">
-                        <input type="file" id="file_apload" value="" accept=".wav,.mp3,.ogg,.acc,.webm" name="music" onchange="music_upload()" style="display: none">
+                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box/upload_music')}" enctype="multipart/form-data">
+                        <input type="file" id="file_apload" value="" accept=".wav,.mp3,.ogg,.acc,.webm" name="voice_file" onchange="music_upload()" style="display: none">
                     </form>
                 </div>
             </div>
