--- a/application/admin/view/box_cate/edit.html
+++ b/application/admin/view/box_cate/edit.html
@@ -19,6 +19,47 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label ">选择上级分类</label>
+                            <div class="col-sm-9">
+                                <select name="pid"  class="form-control">
+                                    <option value="0">顶级分类</option>
+                                    {volist name="cate_list" id="vo"}
+                                        <option value="{$vo.id}" {if condition="$vo.id eq $info.pid"}selected="true"{/if}>{$vo.name}</option>
+                                    {/volist}
+                                </select> 
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">图片</label>
+                            <div class="img-preview" style="display:{$info.picture? 'block':'none'};margin-left:-20%">
+                                <img src="{$info.picture|default=''}" id='img_show' style="min-width: 0px !important; min-height: 0px !important; max-width: none !important; max-height: none !important; width: 300px; height: 200px">
+                            </div>
+                            <div class="form-group" style="margin-left:18%;">
+                                <label title="上传图片" for="pictur_btn" class="btn btn-primary" id="pictur">上传新图像
+                                    <input type="file" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*" name="file" id="pictur_btn" class="hide" />
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">排序</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="sort" value="{$info.sort}" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">状态</label>
+                            <div class="col-sm-9">
+                                <div class="radio radio-success radio-inline">
+                                    <input type="radio" value="1" name="status" id="show1" {if condition="$info.status eq 1"}checked="true"{/if}>
+                                    <label for="show1">启用</label>
+                                </div>
+                                <div class="radio radio-danger radio-inline">
+                                    <input type="radio" value="0" name="status" id="show2" {if condition="$info.status eq 0"}checked="true"{/if}>
+                                    <label for="show2">禁用</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <input value="提交" type="submit" class="btn btn-primary ajax-post" target-form="form-horizontal" type="submit">
                                 <button class="btn btn-white" onclick="javascript:history.back(-1);return false;">取消</button>
@@ -35,37 +76,36 @@
 
 {block name="script"}
 <script src="__STATIC__/js/jquery.form.js" type="text/javascript"></script>
-<script type="text/javascript">
-    //语音上传
-    function music_upload(){
-        $("#form_voice").ajaxSubmit(function (data) {
-            console.log(data);
-            // data = eval('('+data+')');
-            if(data.status == 1){
-                $('input[name="voice_url"]').val(data.url);
-                $('#file1').attr('src','/static/images/music.jpg');
-            }else{
-                alert(data.msg);
+<script>
+    $(function() {
+        var id = "{$Think.get.id}";
+        // 图片检测格式
+        $('#pictur_btn').change(function() {
+            if (!this.value) {
+                $("#img_show").attr('src', '');
+                filedata = '';
+                pictur = '';
+                return false;
+            }
+            var file = this.files[0];
+            var ext = file.name.substr(-3, 3);
+            if (ext != 'jpg' && ext != 'gif' && ext != 'png') {
+                layer.msg("文件格式不正确", { icon: 5 });
+                window.location.reload();
+                return false;
+            }
+            if (file.size > 5120000) {
+                layer.msg("该文件太大无法上传", { icon: 5 });
+            } else {
+                var reader = new FileReader();
+                //将文件以Data URL形式读入页面  
+                reader.readAsDataURL(file);
+                reader.onload = function(e) {
+                    $('.img-preview').show();
+                    $("#img_show").attr('src', this.result);
+                }
             }
         });
-    }
-    //照片上传
-    function photo_upload(){
-        $("#form_photo").ajaxSubmit(function (data) {
-            // data = eval('('+data+')');
-            if(data.status == 1){
-                $('input[name="photo_url"]').val(data.url);
-                $('#file0').attr('src','/static/images/music.jpg');
-            }else{
-                alert(data.msg);
-            }
-        });
-    }
-    // //提交
-    // function formsub(){
-    //     var url = '{:url('box/box_post')}';
-    //     $('#ajaxForm').attr('action',url);
-    //     $('#ajaxForm').submit();
-    // }
+    });
 </script>
 {/block}
