--- a/application/admin/view/box_music/edit.html
+++ b/application/admin/view/box_music/edit.html
@@ -71,7 +71,7 @@
                     <h5>修改音乐</h5>
                 </div>
                 <div class="ibox-content">
-                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box_music/editPost')}" enctype="multipart/form-data">
+                    <form method="post" class="form-horizontal"  action="{:url('box_music/editPost')}" enctype="multipart/form-data">
                         <input type="hidden" name="id" value="{$info.id}">
                         <input type="hidden" name="music_url" value="{$info.music_url}">
                         <div class="form-group">
@@ -120,8 +120,8 @@
                             </div>
                         </div>
                     </form>
-                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box_music/upload_music')}" enctype="multipart/form-data">
-                        <input type="file" id="file_apload" value="" accept=".wav,.mp3,.ogg,.acc,.webm" name="music" onchange="music_upload()" style="display: none">
+                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box/upload_music')}" enctype="multipart/form-data">
+                        <input type="file" id="file_apload" value="" accept=".wav,.mp3,.ogg,.acc,.webm" name="voice_file" onchange="music_upload()" style="display: none">
                     </form>
                 </div>
             </div>
