--- a/application/admin/view/box/add.html
+++ b/application/admin/view/box/add.html
@@ -25,7 +25,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label ">选择音乐</label>
+                            <label class="col-sm-2 control-label ">选择分类</label>
                             <div class="col-sm-9">
                                 <select name="cate_id"  class="form-control">
                                     <option value="">请选择分类</option>
