--- a/application/admin/view/box_cate/add.html
+++ b/application/admin/view/box_cate/add.html
@@ -23,7 +23,7 @@
                                 <select name="pid"  class="form-control">
                                     <option value="0">顶级分类</option>
                                     {volist name="cate_list" id="vo"}
-                                        <option value="{$vo.id}" {if condition="$vo.pid eq $vo.id"}selected="true"{/if}>{$vo.name}</option>
+                                        <option value="{$vo.id}" >{$vo.name}</option>
                                     {/volist}
                                 </select> 
                             </div>
