--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -102,7 +102,7 @@
                                              <th class="th_1"><input type="text" readonly="readonly" style="border: 0px;" name="goods_th[1][]" value="{:lang(\'规格\')}"></th>
                                              <!-- <th><input type="text" readonly="readonly" style="border: 0px;" name="img_th[img][]" value="{:lang(\'图片\')}"></th> -->
                                              <th><input type="text" readonly="readonly" style="border: 0px;" name="pri_th[pri][]" value="{:lang(\'本店售价(元)\')}"></th>
-                                             <th><input type="text" readonly="readonly" style="border: 0px;" name="pri_th[group_pri][]" value="{:lang(\'拼团价格\')}"></th>
+                                             <!-- <th><input type="text" readonly="readonly" style="border: 0px;" name="pri_th[group_pri][]" value="{:lang(\'拼团价格\')}"></th> -->
                                              <th><input type="text" readonly="readonly" style="border: 0px;" name="goods_th[num][]" value="{:lang(\'库存\')}"></th>
                                              <th style="width: 25px;">操作</th>
                                          </tr>
@@ -114,7 +114,7 @@
                                                      <input type="file" name="img_td[img][]" />
                                                 </td> -->
                                                  <td><input type="text" class="pri_id" value="" name="pri_td[pri][]"></td>
-                                                 <td><input type="text" class="pri_id" value="" name="pri_td[group_pri][]"></td>
+                                                 <!-- <td><input type="text" class="pri_id" value="" name="pri_td[group_pri][]"></td> -->
                                                  <td><input class="input-text" type="text" name="goods_td[num][]"></td>
                                                  <td onclick="delTr(this)"><i class="Hui-iconfont del_td"></i></td>
                                              </tr>
@@ -133,7 +133,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">商品详情</label>
+                            <label class="col-sm-2 control-label">商品介绍</label>
                             <div class="col-sm-9">
                                 <script id="editor" name="content" type="text/plain" style="width:100%;height:400px;"></script> 
                             </div>
@@ -144,37 +144,18 @@
                             <div class="col-sm-9">
                                 {volist name="goods_attr" id="vo"}
                                 <label style="margin-top:4px; margin-right:20px;">
-                                    <input type="checkbox" value="{$vo.attr_id}" class="goods_attr" name="goods_attr[]" /> {$vo.attr_name}
+                                    <input type="checkbox" value="{$vo.id}" class="goods_attr" name="goods_attr[]" /> {$vo.name}
                                 </label>
                                 {/volist}
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label"></label>
-                            <div class="col-sm-9">
-                                <div style="line-height:34px;">
-                                    <span style="float:left;margin: 0 7px;">限时卖时间 </span>
-                                    <span style="float:left;margin: 0 7px;"><input type="text" id="limited_start" name="limited_start" disabled value="" class="form-control"></span>
-                                    <span style="float:left;margin: 0 7px;"><input type="text" id="limited_end" name="limited_end" disabled value="" class="form-control"></span>
-                                </div>
-                                    <div style="line-height:34px;">
-                                    <span style="float:left;margin: 0 7px;">puls会员折扣 </span>
-                                    <span style="float:left;margin: 0 7px;"><input type="text"  name="puls_discount" value="" class="form-control">商品现价的%</span>
-                                    </div>
-                                    <div style="line-height:34px;">
-                                    <span style="float:left;margin: 0 7px;">分享金 </span>
-                                    <span style="float:left;margin: 0 7px;"><input type="text"  name="share_discount" value="" class="form-control">商品现价的%</span>
-                                    </div>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label class="col-sm-2 control-label">上架时间</label>
                             <div class="col-sm-9">
                                 <input type="text" id="add_time" name="add_time" value="{$Request.time|date='Y-m-d H:i:s',###}" class="form-control">
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="form-group">
                             <label class="col-sm-2 control-label">商品封面</label>
@@ -195,12 +176,12 @@
                             <label class="col-sm-2 control-label">商品价格</label>
                             <div class="col-sm-9">
                                 <div style="line-height:34px;">
-                                    <span style="float:left;margin: 0 7px;">现价 </span>
+                                    <span style="float:left;margin: 0 7px;"></span>
                                     <span style="float:left;width:10%;"><input type="text" name="price" value="" class="form-control"></span>
-                                    <span style="float:left;margin: 0 7px;">元</span>
+                                    <span style="float:left;margin: 0 7px;">HK</span>
                                 </div>
 
-                                <div style="line-height:34px;">
+                                <!-- <div style="line-height:34px;">
                                     <span style="float:left;margin: 0 7px;">原价 </span>
                                     <span style="float:left;width:10%;"><input type="text" name="original_price" value="" class="form-control"></span>
                                     <span style="float:left;margin: 0 7px;">元</span>
@@ -210,35 +191,10 @@
                                     <span style="float:left;margin: 0 7px;">成本 </span>
                                     <span style="float:left;width:10%;"><input type="text" name="cost_price" value="" class="form-control"></span>
                                     <span style="float:left;margin: 0 7px;">元</span>
-                                </div>
-
-
+                                </div> -->
 
                             </div>
                         </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">返利（现价的百分比）</label>
-
-                            <div style="line-height:34px;">
-                                <span style="float:left;margin: 0 7px;">省代返佣 </span>
-                                <span style="float:left;width:10%;"><input type="text" name="province_proportion" value="" class="form-control"></span>
-                                <span style="float:left;margin: 0 7px;">%</span>
-                             </div>
-
-                            <div style="line-height:34px;">
-                                <span style="float:left;margin: 0 7px;">2级返佣 </span>
-                                <span style="float:left;width:10%;"><input type="text" name="tow_proportion" value="" class="form-control"></span>
-                                <span style="float:left;margin: 0 7px;">%</span>
-                            </div>
-
-                            <div style="line-height:34px;">
-                                <span style="float:left;margin: 0 7px;">无限级返佣 </span>
-                                <span style="float:left;width:10%;"><input type="text" name="infinite_proportion" value="" class="form-control"></span>
-                                <span style="float:left;margin: 0 7px;">%</span>
-                            </div>
-                        </div>
-
 
                         <div class="form-group">
                             <label class="col-sm-2 control-label"><span style="color:red;">*</span>商品分类</label>
@@ -269,7 +225,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label class="col-sm-2 control-label">减库存方式</label>
                             <div class="col-sm-9">
                                 <label style="margin-top:4px; margin-right:20px;">
@@ -282,7 +238,7 @@
                                     <input type="radio" value="3" name="less_stock_type" /> 永不减库存
                                 </label>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="form-group">
                             <label class="col-sm-2 control-label">运费设置</label>
@@ -321,8 +277,6 @@
                                 </label>
                             </div>
                         </div>
-
-
     
                         <div class="form-group">
                             <label class="col-sm-2 control-label">用户最多购买量</label>
@@ -365,13 +319,6 @@
                             </div>
                         </div>
 
-
-
-
-
-
-
-
                         <div class="form-group">
                             <label class="col-sm-2 control-label">是否上架</label>
                             <div class="col-sm-9">
@@ -384,17 +331,6 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">是否升级PULS会员</label>
-                            <div class="col-sm-9">
-                                <label style="margin-top:4px; margin-right:20px;">
-                                    <input type="radio" value="1" name="is_puls" /> 是
-                                </label>
-                                <label>
-                                    <input type="radio" value="0" name="is_puls" checked /> 否
-                                </label>
-                            </div>
-                        </div>
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <button class="btn btn-primary ajax-post" target-form="form-horizontal" type="submit">提交</button>
@@ -428,26 +364,6 @@
 <script src="__STATIC__/layui/src/localResizeIMG2.js" type="text/javascript"></script>
 
 <script type="text/javascript">
-Calendar.setup({
-    inputField     :    "add_time",
-    ifFormat       :    "%Y-%m-%d %H:%M:%S",
-    showsTime      :    true,
-    timeFormat     :    "12"
-});
-
-Calendar.setup({
-    inputField     :    "limited_start",
-    ifFormat       :    "%Y-%m-%d %H:%M:%S",
-    showsTime      :    true,
-    timeFormat     :    "12"
-});
-
-Calendar.setup({
-    inputField     :    "limited_end",
-    ifFormat       :    "%Y-%m-%d %H:%M:%S",
-    showsTime      :    true,
-    timeFormat     :    "12"
-});
 
 var rowCount = $("#goods_table tbody").find("tr").length - 1; //行数
 var colCount = $("#goods_table thead").find("tr").find("th").length - 4; //列数
@@ -506,23 +422,6 @@ $('#goods_table thead tr').on('mouseover', 'th', function(){
 $('#goods_table thead tr').on('mouseout', 'th', function(){
 	$(this).find('.th_close').css("display", "none");
 })
-
-
-
-
-
-    //限时卖
-    $('.goods_attr').on('click',function(){
-        if( $(this).val() == 6 ){
-            if( $(this).is(':checked') ){
-                $('input[name=limited_start]').removeAttr('disabled');
-                $('input[name=limited_end]').removeAttr('disabled');
-            }else{
-                $('input[name=limited_start]').attr('disabled','disabled');
-                $('input[name=limited_end]').attr('disabled','disabled');
-            }
-        }
-    })
 
     //实例化富文本编辑器
     var ue = UE.getEditor('editor',{
