--- a/application/admin/view/goods/add_goods_brand.html
+++ b/application/admin/view/goods/add_goods_brand.html
@@ -68,60 +68,57 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>修改音乐</h5>
+                    <h5>{$meta_title}</h5>
                 </div>
                 <div class="ibox-content">
-                    <form method="post" class="form-horizontal"  action="{:url('box_music/editPost')}" enctype="multipart/form-data">
+                    <form method="post" class="form-horizontal" action="">
                         <input type="hidden" name="id" value="{$info.id}">
-                        <input type="hidden" name="music_url" value="{$info.music_url}">
+                        <input type="hidden" name="priture" value="{$info.priture}">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label"><span style="color:red;">*</span>音乐名称</label>
+                            <label class="col-sm-2 control-label"><span style="color:red;">*</span>品牌名称</label>
                             <div class="col-sm-9">
-                                <input type="text" name="name"  class="form-control" value="{$info.name}">
+                                <input type="text" name="name" value="{$info.name}" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label"><span style="color:red;">*</span>音乐人</label>
-                            <div class="col-sm-9">
-                                <input type="text" name="musician" value="{$info.musician}" class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">音乐上传</label>
+                            <label class="col-sm-2 control-label">logo</label>
                             <div class="col-sm-9">
                                     <dd class="upload_area clearfix" style="margin: 0 auto;">
                                         <ul id="imglist" class="post_imglist">
-                                            <li><a href="{$info.music_url}" class="music_css"><img class="wh60" id="file0" src="__STATIC__/images/music.jpg"></a></li>
+                                            <li><img class="wh60" id="image_src" src="{$info.priture|default='/static/images/default.jpg'}"></li>
                                         </ul>
-                                        <div class="upload_btn">
-                                            <input type="file" id="upload_music" value="" accept=".wav,.mp3,.ogg,.acc,.webm" name="music" onchange="music_upload()">
-                                        </div>
+                                        <label for="image_file"><div class="upload_btn"></div></label>
                                     </dd>
                             </div>
                         </div>
-
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">简介</label>
+                            <div class="col-sm-9">
+                                <textarea name="introduce" required lay-verify="required" placeholder="请输入简介" class="layui-textarea">{$info.introduce}</textarea>
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">是否启用</label>
                             <div class="col-sm-9">
                                 <label style="margin-top:4px; margin-right:20px;">
-                                    <input type="radio" value="0" name="status" {if condition="$info.status neq 1"}checked{/if} /> 否
+                                    <input type="radio" value="0" name="status" {if condition="$info.status eq 0"}checked{/if} /> 是
                                 </label>
                                 <label>
-                                    <input type="radio" value="1" name="status" {if condition="$info.status eq 1"}checked{/if}/> 是
+                                    <input type="radio" value="1" name="status" {if condition="$info.status eq 1"}checked{/if} /> 否
                                 </label>
                             </div>
                         </div>
-                        
 
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
-                                <input value="提交" type="submit" class="btn btn-primary ajax-post" target-form="form-horizontal" type="submit">
+                                <button class="btn btn-primary ajax-post" target-form="form-horizontal" type="submit">提交</button>
                                 <button class="btn btn-white" onclick="javascript:history.back(-1);return false;">取消</button>
                             </div>
                         </div>
                     </form>
-                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box/upload_music')}" enctype="multipart/form-data">
-                        <input type="file" id="file_apload" value="" accept=".wav,.mp3,.ogg,.acc,.webm" name="voice_file" onchange="music_upload()" style="display: none">
+                    <!-- 图片上传 -->
+                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
+                        <input type="file" id="image_file" value="" accept="image/*" name="file" onchange="upload_file()" style="display: none">
                     </form>
                 </div>
             </div>
@@ -132,30 +129,19 @@
 {/block}
 
 {block name="script"}
+<script src="__STATIC__/layui/src/localResizeIMG2.js" type="text/javascript"></script>
 <script src="__STATIC__/js/jquery.form.js" type="text/javascript"></script>
 <script type="text/javascript">
     //音乐上传
-    function music_upload(){
+    function upload_file(){
         $("#ajaxForm").ajaxSubmit(function (data) {
             if(data.status == 1){
-                $('input[name="music_url"]').val(data.url);
-                $('#file0').attr('src','/static/images/music.jpg');
-                $('.music_css').attr('href',data.url);
-                tiao();
+                $('input[name="priture"]').val(data.data);
+                $('#image_src').attr('src',data.data);
             }else{
                 alert(data.msg);
             }
         });
-    }
-    //跳窗口
-    tiao();
-    function tiao(){
-        //音乐
-        if($('.music_css').attr('href') != '' && $('.music_css').attr('href') != 'javascript:;'){
-            $('.music_css').attr('target','_blank');
-        }else{
-            $('.music_css').attr('href','javascript:;');
-        }
     }
 </script>
 {/block}
