--- a/application/admin/view/turntable/add_joke.html
+++ b/application/admin/view/turntable/add_joke.html
@@ -10,50 +10,23 @@
                     <h5>添加类别</h5>
                 </div>
                 <div class="ibox-content">
-                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('box_cate/cate_post')}" enctype="multipart/form-data">
+                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('add_joke')}" enctype="multipart/form-data">
+                        <input type="hidden" name="id" value="{$info.id}">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">名称</label>
+                            <label class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-9">
-                                <input type="text" name="name" value="" class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label ">选择上级分类</label>
-                            <div class="col-sm-9">
-                                <select name="pid"  class="form-control">
-                                    <option value="0">顶级分类</option>
-                                    {volist name="cate_list" id="vo"}
-                                        <option value="{$vo.id}" >{$vo.name}</option>
-                                    {/volist}
-                                </select> 
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">图片</label>
-                            <div class="img-preview" style="display:{$info.picture? 'block':'none'};margin-left:-20%">
-                                <img src="{$info.picture|default=''}" id='img_show' style="min-width: 0px !important; min-height: 0px !important; max-width: none !important; max-height: none !important; width: 300px; height: 200px">
-                            </div>
-                            <div class="form-group" style="margin-left:18%;">
-                                <label title="上传图片" for="pictur_btn" class="btn btn-primary" id="pictur">上传新图像
-                                    <input type="file" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*" name="file" id="pictur_btn" class="hide" />
-                                </label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">排序</label>
-                            <div class="col-sm-9">
-                                <input type="text" name="sort" value="" class="form-control">
+                                <textarea name="content" required lay-verify="required" placeholder="请输入内容" class="layui-textarea">{$info.content}</textarea>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">状态</label>
                             <div class="col-sm-9">
                                 <div class="radio radio-success radio-inline">
-                                    <input type="radio" value="1" name="status" checked="true" id="show1" >
+                                    <input type="radio" value="0" name="status" {if condition="$info.status eq 0"}checked{/if} id="show1" >
                                     <label for="show1">启用</label>
                                 </div>
                                 <div class="radio radio-danger radio-inline">
-                                    <input type="radio" value="0" name="status" id="show2"  >
+                                    <input type="radio" value="1" name="status" {if condition="$info.status eq 1"}checked{/if} id="show2"  >
                                     <label for="show2">禁用</label>
                                 </div>
                             </div>
