--- a/application/admin/view/turntable/joke_list.html
+++ b/application/admin/view/turntable/joke_list.html
@@ -16,16 +16,14 @@
                         <!-- <a class="btn btn-default delete" href="{:url('add')}" >添加礼盒 </i></a> -->
                         <!-- <a class="btn btn-default delete" onclick="del_all(0)" href="javascript:;" >批量删除 <i class="fa fa-trash-o"></i></a> -->
                     </div>
-
                     <div class="table-responsive">
                         <table class="table table-striped">
                             <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>类别名称</th>
+                                <th>内容</th>
                                 <th>状态</th>
                                 <th>添加时间</th>
-                                <th>排序</th>
                                 <th>操作</th>
                             </tr>
                             </thead>
@@ -33,29 +31,14 @@
                             {volist name="list" id="vo"}
                             <tr>
                                 <td>{$vo.id}</td>
-                                <td>{$vo.name}</td>
-                                <td>{if condition="$vo.status eq 1"}启用{else/}禁用{/if}</td>
+                                <td>{$vo.content}</td>
+                                <td>{if condition="$vo.status eq 1"}禁用{else/}启用{/if}</td>
                                 <td>{$vo.addtime|date='Y-m-d',###}</td>
-                                <td>{$vo.sort}</td>
                                 <td>
-                                    <a class="btn btn-default delete" href="{:url('edit',['id'=>$vo.id],false)}" >编辑 </i></a>
-                                    <a class="btn btn-default delete" href="{:url('add',['pid'=>$vo.pid],false)}" >添加子分类</i></a>
+                                    <a class="btn btn-default delete" href="{:url('add_joke',['id'=>$vo.id],false)}" >编辑 </i></a>
                                     <a class="btn btn-default delete" onclick="del(this,{$vo.id})" href="javascript:;" >删除 </i></a>
                                 </td>
                             </tr>
-                                {volist name="vo.list" id="v"}
-                                <tr>
-                                    <td>{$v.id}</td>
-                                    <td>------ {$v.name}</td>
-                                    <td>{if condition="$v.status eq 1"}启用{else/}禁用{/if}</td>
-                                    <td>{$v.addtime|date='Y-m-d',###}</td>
-                                    <td>{$v.sort}</td>
-                                    <td>
-                                        <a class="btn btn-default delete" href="{:url('edit',['id'=>$v.id],false)}" >编辑 </i></a>
-                                        <a class="btn btn-default delete" onclick="del(this,{$v.id})" href="javascript:;" >删除 </i></a>
-                                    </td>
-                                </tr>
-                                {/volist}
                             {/volist}
                             </tbody>
                         </table>
