修改首页接口

--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -100,7 +100,7 @@
                                         <thead>
                                          <tr>
                                              <th class="th_1"><input type="text" readonly="readonly" style="border: 0px;" name="goods_th[1][]" value="{:lang(\'规格\')}"></th>
-                                             <!-- <th><input type="text" readonly="readonly" style="border: 0px;" name="img_th[img][]" value="{:lang(\'图片\')}"></th> -->
+                                             <th><input type="text" readonly="readonly" style="border: 0px;" name="img_th[img][]" value="{:lang(\'图片\')}"></th>
                                              <th><input type="text" readonly="readonly" style="border: 0px;" name="pri_th[pri][]" value="{:lang(\'本店售价(元)\')}"></th>
                                              <!-- <th><input type="text" readonly="readonly" style="border: 0px;" name="pri_th[group_pri][]" value="{:lang(\'拼团价格\')}"></th> -->
                                              <th><input type="text" readonly="readonly" style="border: 0px;" name="goods_th[num][]" value="{:lang(\'库存\')}"></th>
@@ -110,9 +110,9 @@
                                          <tbody>
                                              <tr class="tr_1">
                                                  <td class="td_1"><input class="input-text" type="text" name="goods_td[1][]"></td>
-                                                 <!-- <td>
+                                                 <td>
                                                      <input type="file" name="img_td[img][]" />
-                                                </td> -->
+                                                </td>
                                                  <td><input type="text" class="pri_id" value="" name="pri_td[pri][]"></td>
                                                  <!-- <td><input type="text" class="pri_id" value="" name="pri_td[group_pri][]"></td> -->
                                                  <td><input class="input-text" type="text" name="goods_td[num][]"></td>
