添加购物车

--- a/application/admin/view/box/add.html
+++ b/application/admin/view/box/add.html
@@ -73,7 +73,7 @@
 
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
-                                <input value="提交" type="submit" class="btn btn-primary ajax-post" target-form="form-horizontal" type="submit" onclick="formsub()">
+                                <input value="提交" type="submit" class="btn btn-primary ajax-post" target-form="form-horizontal" type="submit" >
                                 <button class="btn btn-white" onclick="javascript:history.back(-1);return false;">取消</button>
                             </div>
                         </div>
