--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -300,22 +300,7 @@
                             </div>
                         </div> -->
     
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">用户最多购买量</label>
-                            <div class="col-sm-9">
-                                <span style="width:80%;float:left;">
-                                    <input type="text" name="most_buy_number" value="" class="form-control">
-                                </span>
-                                <span style="line-height:34px;">
-                                    件
-                                </span>
-                                <div>用户购买过的此商品数量限制</div>
-                            </div>
-                        </div>
-
-
-
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label class="col-sm-2 control-label">已售数量</label>
                             <div class="col-sm-9">
                                 <span style="width:80%;float:left;">
@@ -326,20 +311,7 @@
                                 </span>
                                 <div>物品虚拟出售数，会员下单此数据就会增加，无论是否支付</div>
                             </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">单次最多购买量</label>
-                            <div class="col-sm-9">
-                                <span style="width:80%;float:left;">
-                                    <input type="text" name="single_number" value="" class="form-control">
-                                </span>
-                                <span style="line-height:34px;">
-                                    件
-                                </span>
-                                <div>用户单次购买此商品数量限制</div>
-                            </div>
-                        </div>
+                        </div> -->
 
                         <div class="form-group">
                             <label class="col-sm-2 control-label">是否上架</label>
