‘添加商品税金和优惠立减

--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -188,19 +188,26 @@
                                     <span style="float:left;width:10%;"><input type="text" name="price" value="" class="form-control"></span>
                                     <span style="float:left;margin: 0 7px;">HK</span>
                                 </div>
-
-                                <!-- <div style="line-height:34px;">
-                                    <span style="float:left;margin: 0 7px;">原价 </span>
-                                    <span style="float:left;width:10%;"><input type="text" name="original_price" value="" class="form-control"></span>
-                                    <span style="float:left;margin: 0 7px;">元</span>
-                                </div>
-
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">税金率</label>
+                            <div class="col-sm-9">
                                 <div style="line-height:34px;">
-                                    <span style="float:left;margin: 0 7px;">成本 </span>
-                                    <span style="float:left;width:10%;"><input type="text" name="cost_price" value="" class="form-control"></span>
-                                    <span style="float:left;margin: 0 7px;">元</span>
-                                </div> -->
-
+                                    <span style="float:left;margin: 0 7px;"></span>
+                                    <span style="float:left;width:10%;"><input type="text" name="taxes" value="" class="form-control"></span>
+                                    <span style="float:left;margin: 0 7px;">%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">优惠立减</label>
+                            <div class="col-sm-9">
+                                <div style="line-height:34px;">
+                                    <span style="float:left;margin: 0 7px;"></span>
+                                    <span style="float:left;width:10%;"><input type="text" name="discount" value="" class="form-control"></span>
+                                    <span style="float:left;margin: 0 7px;">HK</span>
+                                </div>
                             </div>
                         </div>
 
