--- a/application/admin/view/goods/edit.html
+++ b/application/admin/view/goods/edit.html
@@ -244,6 +244,26 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">税金率</label>
+                            <div class="col-sm-9">
+                                <div style="line-height:34px;">
+                                    <span style="float:left;margin: 0 7px;"></span>
+                                    <span style="float:left;width:10%;"><input type="text" name="taxes" value="{$info.taxes}" class="form-control"></span>
+                                    <span style="float:left;margin: 0 7px;">%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">优惠立减</label>
+                            <div class="col-sm-9">
+                                <div style="line-height:34px;">
+                                    <span style="float:left;margin: 0 7px;"></span>
+                                    <span style="float:left;width:10%;"><input type="text" name="discount" value="{$info.discount}" class="form-control"></span>
+                                    <span style="float:left;margin: 0 7px;">HK</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-sm-2 control-label"><span style="color:red;">*</span>商品分类</label>
                             <div class="col-sm-9">
                                 <div style="line-height:34px;float:left;margin:0 10px 0 0;">
